fix an issue with clicking on menus on mobiles - profile div was overlaying the links (#2)

--- a/assets/css/extended/overrides.css
+++ b/assets/css/extended/overrides.css
@@ -26,6 +26,10 @@ body {
 
 /* home page */
 
+.main .profile {
+    position: relative;
+}
+
 .profile img {
     border-radius: 0;
 }
